Spotify & Discord to bg

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -193,6 +193,10 @@ bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, F, fullscreen,
 
+# Spotify and Discord background toggle
+bind = $mainMod ALT, S, exec, ~/.config/hypr/scripts/toBackground.sh Spotify
+bind = $mainMod ALT, D, exec, ~/.config/hypr/scripts/toBackground.sh discord
+
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
@@ -241,20 +245,7 @@ bind = $mainMod, PRINT, exec, hyprshot -m window
 	# Screenshot a monitor
 bind = , PRINT, exec, hyprshot -m output
 	# Screenshot a region
-bind = $shiftMod, PRINT, exec, hyprshot -m region
-
-
-# Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
-
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
-
-# Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
+bind = $mainMod SHIFT, PRINT, exec, hyprshot -m region
 
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
