--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -21,7 +21,8 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=DP-1,preferred, auto, 1
+monitor=HDMI-A-1,preferred, 1920x0, 1
+monitor=DP-1,1920x1080@144, 0x0, 1
 monitor=DP-3,preferred, -1920x0, 1
 
 
@@ -34,7 +35,7 @@ monitor=DP-3,preferred, -1920x0, 1
 # Set programs that you use
 $terminal = alacritty
 $menu = wofi --show drun
-
+$fileManager = dolphin
 
 #################
 ### AUTOSTART ###
@@ -43,7 +44,6 @@ $menu = wofi --show drun
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
- exec-once = $terminal
 # exec-once = nm-applet &
 exec-once = waybar & hyprpaper & pulseaudio
 exec-once = $HOME/.config/hypr/scripts/import_env.sh tmux
@@ -148,10 +148,10 @@ misc {
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout = us
+    kb_layout = us,es
     kb_variant =
     kb_model =
-    kb_options =
+    kb_options = grp:lctrl_lwin_toggle
     kb_rules =
 
     follow_mouse = 1
@@ -196,6 +196,10 @@ bind = $mainMod, F, fullscreen,
 # Spotify and Discord background toggle
 bind = $mainMod ALT, S, exec, ~/.config/hypr/scripts/toBackground.sh Spotify
 bind = $mainMod ALT, D, exec, ~/.config/hypr/scripts/toBackground.sh discord
+
+# Drag to move windows
+bindm=SUPER,mouse:272,movewindow
+bindm=SUPER,mouse:273,resizewindow
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
