--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -22,7 +22,7 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=HDMI-A-1,preferred, 1920x0, 1
-monitor=DP-1,1920x1080@144, 0x0, 1
+monitor=DP-1,1920x1080@144, 0x0, 1, bitdepth, 10
 monitor=DP-3,preferred, -1920x0, 1
 
 
@@ -141,6 +141,8 @@ misc {
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
 }
 
+
+windowrule=float,title:^(alacritty|Volume\ Control|spotify|discord|cube|devrule)(.*)$
 
 #############
 ### INPUT ###
@@ -273,3 +275,10 @@ bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+env = bitdepth,10
+
+windowrulev2 = opacity 0.0 override, class:^(xwaylandvideobridge)$
+windowrulev2 = noanim, class:^(xwaylandvideobridge)$
+windowrulev2 = noinitialfocus, class:^(xwaylandvideobridge)$
+windowrulev2 = maxsize 1 1, class:^(xwaylandvideobridge)$
+windowrulev2 = noblur, class:^(xwaylandvideobridge)$
