--- a/waybar/config
+++ b/waybar/config
@@ -4,9 +4,6 @@
 	"layer": "top",
 	"position": "top",
 
-	"modules-left": [
-		
-	],
 	"modules-center":[
 		"custom/left-arrow-dark",
 		"clock#1",
@@ -65,7 +62,7 @@
 	},
 
 	"pulseaudio": {
-		"format": "{icon} {volume:2}%",
+		"format": "{icon}  {volume:2}%",
 		"format-bluetooth": "{icon}  {volume}%",
 		"format-muted": "MUTE",
 		"format-icons": {
@@ -81,11 +78,11 @@
 	},
 	"memory": {
 		"interval": 5,
-		"format": "Mem {}%"
+		"format": "󰅒 {:2}%"
 	},
 	"cpu": {
 		"interval": 5,
-		"format": "CPU {usage:2}%"
+		"format": " {usage:2}%"
 	},
 	"battery": {
 		"states": {
@@ -104,7 +101,7 @@
 	},
 	"disk": {
 		"interval": 5,
-		"format": "Disk {percentage_used:2}%",
+		"format": " {percentage_used:2}%",
 		"path": "/"
 	},
 	"tray": {
